objects/Vehicle_Interest__c.object
<CustomObject>
    <label>Vehicle Interest.</label>
    <nameField>
        <label>Vehicle Interest.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sunroof__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunroof</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_Wheel_Drive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4 Wheel Drive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manual_Transmission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Transmission</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>